@@ -24,6 +24,7 @@ package org.modelio.diagram.elements.common.abstractdiagram;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.ListIterator;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import com.modeliosoft.modelio.javadesigner.annotations.objid;
@@ -43,6 +44,7 @@ import org.eclipse.gef.LayerConstants;
 import org.eclipse.gef.Request;
 import org.eclipse.gef.SnapToGrid;
 import org.eclipse.gef.SnapToHelper;
+import org.eclipse.gef.editpolicies.AbstractEditPolicy;
 import org.eclipse.gef.requests.DropRequest;
 import org.eclipse.gef.requests.ReconnectRequest;
 import org.eclipse.swt.graphics.Color;
@@ -63,16 +65,22 @@ import org.modelio.metamodel.uml.infrastructure.Constraint;
 @objid ("7e038885-1dec-11e2-8cad-001ec947c8cc")
 public class AbstractDiagramEditPart extends GmNodeEditPart {
     /**
-     * Grid color property key.
+     * Role used to name policy that delegates to the drawing layer
      */
-    @objid ("90df2c84-1e83-11e2-8cad-001ec947c8cc")
-    public static final String PROPERTY_GRID_COLOR = "AbstractDiagramEditPart.GridColor";
+    @objid ("0d5a1d42-40b4-4062-a313-07c924a95a05")
+    private static final String DRAWINGLAYER_ROLE = "DRAWINGLAYER_ROLE";
 
     /**
-     * Grid transparency property key.
+     * ID of the layer pane where drawing layers are put.
      */
-    @objid ("90df2c8a-1e83-11e2-8cad-001ec947c8cc")
-    public static final String PROPERTY_GRID_ALPHA = "AbstractDiagramEditPart.GridAlpha";
+    @objid ("9eeff616-9943-42e1-8193-1a4fa86532d1")
+    private static final String LAYER_PANE_DRAWING = "LAYER_PANE_DRAWING";
+
+    /**
+     * Fill image transparency property key.
+     */
+    @objid ("90df2c9c-1e83-11e2-8cad-001ec947c8cc")
+    public static final String PROPERTY_FILL_ALPHA = "AbstractDiagramEditPart.FillAlpha";
 
     /**
      * Diagram fill color property key.
@@ -87,22 +95,22 @@ public class AbstractDiagramEditPart extends GmNodeEditPart {
     public static final String PROPERTY_FILL_IMAGE = "AbstractDiagramEditPart.FillImage";
 
     /**
-     * Fill image transparency property key.
-     */
-    @objid ("90df2c9c-1e83-11e2-8cad-001ec947c8cc")
-    public static final String PROPERTY_FILL_ALPHA = "AbstractDiagramEditPart.FillAlpha";
-
-    /**
      * Fill tile size property key.
      */
     @objid ("90df2ca2-1e83-11e2-8cad-001ec947c8cc")
     public static final String PROPERTY_FILL_TILE_SIZE = "AbstractDiagramEditPart.FillTileSize";
 
     /**
-     * ID of the layer pane where drawing layers are put.
+     * Grid transparency property key.
      */
-    @objid ("9eeff616-9943-42e1-8193-1a4fa86532d1")
-    private static final String LAYER_PANE_DRAWING = "LAYER_PANE_DRAWING";
+    @objid ("90df2c8a-1e83-11e2-8cad-001ec947c8cc")
+    public static final String PROPERTY_GRID_ALPHA = "AbstractDiagramEditPart.GridAlpha";
+
+    /**
+     * Grid color property key.
+     */
+    @objid ("90df2c84-1e83-11e2-8cad-001ec947c8cc")
+    public static final String PROPERTY_GRID_COLOR = "AbstractDiagramEditPart.GridColor";
 
     /**
      * Default constructor.
@@ -153,6 +161,49 @@ public class AbstractDiagramEditPart extends GmNodeEditPart {
         // return new XYAnchor(p);
     }
 
+    /**
+     * Redefined to add {@link DrawingLayerEditPart} layers in the drawing layer pane.
+     * <p/>
+     * Subclasses willing to redefine this method must redefine {@link #doAddChildVisual(EditPart, int)} instead,
+     * so that they won't be annoyed by drawing layers.
+     */
+    @objid ("80a29b4a-33d5-4b9f-813d-bb17f88ff7d5")
+    @Override
+    protected final void addChildVisual(EditPart childEditPart, int index) {
+        if (childEditPart instanceof DrawingLayerEditPart) {
+            // Add all drawing layers to the drawing layer pane, except the background layer
+            // that stays in this layer.
+            if (index != 0) {
+                // childEditPart is a Foreground layer
+                getDrawingLayerPane().add(((DrawingLayerEditPart) childEditPart).getFigure());
+            } else {
+                // index==0: childEditPart is the background drawing layer
+                super.addChildVisual(childEditPart, index);
+            }
+        } else {
+            doAddChildVisual(childEditPart, index);
+        }
+    }
+
+    /**
+     * Creates the layer pane where drawing layers are put.
+     * <p>
+     * The layer pane is put on top of the {@link LayerConstants#PRINTABLE_LAYERS} layer.
+     * @return the drawings layer pane.
+     */
+    @objid ("a7c40bc5-f7d4-42c6-b604-273fc07d900b")
+    protected LayeredPane createDrawingLayerPane() {
+        // Ensure the diagram layers already exist
+        getFigure();
+        
+        // Create the drawing layer on top of the diagram layer.
+        FreeformLayeredPane drawLayerPane = new FreeformLayeredPane();
+        //getViewer().getEditPartRegistry().put(drawLayerPane, LAYER_PANE_DRAWING);
+        LayeredPane pane = (LayeredPane) getLayer(LayerConstants.PRINTABLE_LAYERS);
+        pane.add(drawLayerPane, LAYER_PANE_DRAWING);
+        return drawLayerPane;
+    }
+
     @objid ("7e05eb01-1dec-11e2-8cad-001ec947c8cc")
     @Override
     protected void createEditPolicies() {
@@ -169,6 +220,52 @@ public class AbstractDiagramEditPart extends GmNodeEditPart {
         
         // For constraints "body"
         installEditPolicy(Metamodel.getMClass(Constraint.class).getName(), new ConstraintFinalizationEditPolicy());
+        
+        // To redirect to drawing layers
+        installEditPolicy(DRAWINGLAYER_ROLE, new AskDrawingLayerEditPolicy());
+    }
+
+    @objid ("e13d5a6e-f507-4d36-834c-e75a3cbe351d")
+    protected void doAddChildVisual(EditPart childEditPart, int index) {
+        super.addChildVisual(childEditPart, index);
+    }
+
+    @objid ("18a001e2-2d25-40da-9873-644e28ddd622")
+    protected void doRemoveChildVisual(EditPart childEditPart) {
+        super.removeChildVisual(childEditPart);
+    }
+
+    /**
+     * Get the layer pane where drawing layers are put.
+     * @return the drawings layer pane.
+     */
+    @objid ("2b7373ed-b77c-4cd3-bbae-8887dba3c516")
+    protected final LayeredPane getDrawingLayerPane() {
+        LayeredPane pane = (LayeredPane) getLayer(LAYER_PANE_DRAWING);
+        if (pane == null)
+            pane = createDrawingLayerPane();
+        return pane;
+    }
+
+    @objid ("3cb77c77-2b4d-47c8-834a-ae8b5344a64e")
+    @Override
+    protected List<Object> getModelChildren() {
+        GmAbstractDiagram d = (GmAbstractDiagram) getModel();
+        // Add background layer first
+        // default children next
+        // and finish with foreground layers.
+        
+        final List<?> modelChildren = super.getModelChildren();
+        final Collection<IGmDrawingLayer> drawingLayers = d.getDrawingLayers();
+        
+        ArrayList<Object> ret = new ArrayList<>(modelChildren.size()+ drawingLayers.size() + 1);
+        
+        if (d.getBackgroundDrawingLayer()!= null)
+            ret.add(d.getBackgroundDrawingLayer());
+        
+        ret.addAll(modelChildren);
+        ret.addAll(drawingLayers);
+        return ret;
     }
 
     /**
@@ -194,7 +291,7 @@ public class AbstractDiagramEditPart extends GmNodeEditPart {
         int fillAlpha = style.getInteger(GmAbstractDiagramStyleKeys.FILLALPHA);
         
         // Process the page size property
-        // TODO: in the future this parsing might become the responsability of the property view, 
+        // TODO: in the future this parsing might become the responsibility of the property view, 
         // ie the property view would propose a 'Dimension' editor returning the proper 'in pixel' dimension value...
         String pageSize = (String) style.getProperty(GmAbstractDiagramStyleKeys.PAGE_SIZE);
         Dimension pixelPageSize = null;
@@ -206,8 +303,8 @@ public class AbstractDiagramEditPart extends GmNodeEditPart {
         
         //
         EditPartViewer v = this.getRoot().getViewer();
-        v.setProperty(SnapToGrid.PROPERTY_GRID_VISIBLE, new Boolean(viewGrid));
-        v.setProperty(SnapToGrid.PROPERTY_GRID_ENABLED, new Boolean(snapToGrid));
+        v.setProperty(SnapToGrid.PROPERTY_GRID_VISIBLE, Boolean.valueOf(viewGrid));
+        v.setProperty(SnapToGrid.PROPERTY_GRID_ENABLED, Boolean.valueOf(snapToGrid));
         v.setProperty(SnapToGrid.PROPERTY_GRID_SPACING, new Dimension(gridSpacing, gridSpacing));
         v.setProperty(AbstractDiagramEditPart.PROPERTY_GRID_COLOR, gridColor);
         v.setProperty(AbstractDiagramEditPart.PROPERTY_GRID_ALPHA, new Integer(gridAlpha));
@@ -221,6 +318,22 @@ public class AbstractDiagramEditPart extends GmNodeEditPart {
         // 
         v.setProperty(AbstractDiagramEditPart.PROPERTY_FILL_TILE_SIZE, pixelPageSize);
         diagramFigure.setPageBoundaries(pixelPageSize);
+    }
+
+    /**
+     * Redefined to remove DrawingLayerEditPart layers from the drawing layer pane.
+     * <br/>
+     * Subclasses must redefine {@link #doRemoveChildVisual(EditPart)}.
+     */
+    @objid ("78c57828-b40b-489b-b4eb-11e103e5eae4")
+    @Override
+    protected final void removeChildVisual(EditPart childEditPart) {
+        if (childEditPart instanceof DrawingLayerEditPart) {
+            final IFigure childFigure = ((GraphicalEditPart) childEditPart).getFigure();
+            childFigure.getParent().remove(childFigure);
+        } else {
+            doRemoveChildVisual(childEditPart);
+        }
     }
 
     @objid ("7e05eb0c-1dec-11e2-8cad-001ec947c8cc")
@@ -303,104 +416,34 @@ public class AbstractDiagramEditPart extends GmNodeEditPart {
         return null;
     }
 
-    @objid ("3cb77c77-2b4d-47c8-834a-ae8b5344a64e")
-    @Override
-    protected List<Object> getModelChildren() {
-        GmAbstractDiagram d = (GmAbstractDiagram) getModel();
-        // Add background layer first
-        // default children next
-        // and finish with foreground layers.
-        
-        final List<?> modelChildren = super.getModelChildren();
-        final Collection<IGmDrawingLayer> drawingLayers = d.getDrawingLayers();
-        
-        ArrayList<Object> ret = new ArrayList<>(modelChildren.size()+ drawingLayers.size() + 1);
-        
-        if (d.getBackgroundDrawingLayer()!= null)
-            ret.add(d.getBackgroundDrawingLayer());
-        
-        ret.addAll(modelChildren);
-        ret.addAll(drawingLayers);
-        return ret;
-    }
-
     /**
-     * Redefined to add {@link DrawingLayerEditPart} layers in the drawing layer pane.
-     * <p/>
-     * Subclasses willing to redefine this method must redefine {@link #doAddChildVisual(EditPart, int)} instead,
-     * so that they won't be annoyed by drawing layers.
+     * Edit policy that redirects request to the drawing layers
+     * @author cmarin
      */
-    @objid ("80a29b4a-33d5-4b9f-813d-bb17f88ff7d5")
-    @Override
-    protected final void addChildVisual(EditPart childEditPart, int index) {
-        if (childEditPart instanceof DrawingLayerEditPart) {
-            // Add all drawing layers to the drawing layer pane, except the background layer
-            // that stays in this layer.
-            if (index != 0) {
-                getDrawingLayerPane().add(((DrawingLayerEditPart) childEditPart).getFigure());
-            } else {
-                super.addChildVisual(childEditPart, index);
+    @objid ("4d6b7bcf-d62e-4126-a0b9-8879a9f841ce")
+    private static class AskDrawingLayerEditPolicy extends AbstractEditPolicy {
+        @objid ("2e8345e9-2a0a-491b-9b04-3992e964db70")
+        public AskDrawingLayerEditPolicy() {
+            super();
+        }
+
+        @objid ("e6becfb4-2ff2-4371-9167-f2861abb8295")
+        @Override
+        public EditPart getTargetEditPart(Request request) {
+            @SuppressWarnings("unchecked")
+            List<EditPart> l = getHost().getChildren();
+            ListIterator<EditPart> it = l.listIterator(l.size());
+            while(it.hasPrevious()) {
+                EditPart o = it.previous();
+                if (o instanceof DrawingLayerEditPart) {
+                    EditPart target = o.getTargetEditPart(request);
+                    if (target != null)
+                        return target;
+                }
             }
-        } else {
-            doAddChildVisual(childEditPart, index);
+            return null;
         }
-    }
 
-    /**
-     * Redefined to remove DrawingLayerEditPart layers from the drawing layer pane.
-     * <br/>
-     * Subclasses must redefine {@link #doRemoveChildVisual(EditPart)}.
-     */
-    @objid ("78c57828-b40b-489b-b4eb-11e103e5eae4")
-    @Override
-    protected final void removeChildVisual(EditPart childEditPart) {
-        if (childEditPart instanceof DrawingLayerEditPart) {
-            final IFigure childFigure = ((GraphicalEditPart) childEditPart).getFigure();
-            childFigure.getParent().remove(childFigure);
-        } else {
-            doRemoveChildVisual(childEditPart);
-        }
-    }
-
-    /**
-     * Get the layer pane where drawing layers are put.
-     * @return the drawings layer pane.
-     */
-    @objid ("2b7373ed-b77c-4cd3-bbae-8887dba3c516")
-    protected final LayeredPane getDrawingLayerPane() {
-        LayeredPane pane = (LayeredPane) getLayer(LAYER_PANE_DRAWING);
-        if (pane == null)
-            pane = createDrawingLayerPane();
-        return pane;
-    }
-
-    /**
-     * Creates the layer pane where drawing layers are put.
-     * <p>
-     * The layer pane is put on top of the {@link LayerConstants#PRINTABLE_LAYERS} layer.
-     * @return the drawings layer pane.
-     */
-    @objid ("a7c40bc5-f7d4-42c6-b604-273fc07d900b")
-    protected LayeredPane createDrawingLayerPane() {
-        // Ensure the diagram layers already exist
-        getFigure();
-        
-        // Create the drawing layer on top of the diagram layer.
-        FreeformLayeredPane drawLayerPane = new FreeformLayeredPane();
-        //getViewer().getEditPartRegistry().put(drawLayerPane, LAYER_PANE_DRAWING);
-        LayeredPane pane = (LayeredPane) getLayer(LayerConstants.PRINTABLE_LAYERS);
-        pane.add(drawLayerPane, LAYER_PANE_DRAWING);
-        return drawLayerPane;
-    }
-
-    @objid ("e13d5a6e-f507-4d36-834c-e75a3cbe351d")
-    protected void doAddChildVisual(EditPart childEditPart, int index) {
-        super.addChildVisual(childEditPart, index);
-    }
-
-    @objid ("18a001e2-2d25-40da-9873-644e28ddd622")
-    protected void doRemoveChildVisual(EditPart childEditPart) {
-        super.removeChildVisual(childEditPart);
     }
 
 }
